GC Dental/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <picklist>
            <picklistValues>
                <fullName>Abdullah.SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abhik Ghosh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajay Rao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amit Bharadwaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amol S.Satpute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil Kumar P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashish das</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bejoy Raj K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhanu Prakash.P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binny George.K.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devendra Kumar Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farukh Tai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganesh R.Shirsath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harish K V Gowda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ishan Desh Pandae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jayesh Sawant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitender Bhaskar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joshua Gnanadurai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhusudhan Y E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manoj kumar singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manoj Telgote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mousum Borah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaraj S.M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narasimha Murthy.V.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naresh Suresh Kamath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navjeet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neelima Kola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nilesh Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nittu Antony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pankaj Yadav</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <picklist>
            <controllingField>Billing_State__c</controllingField>
            <picklistValues>
                <fullName>Abohar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achalpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adityapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmadnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akbarpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alappuzha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala Sadar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambattur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambernath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambikapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amravati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amreli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amroha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code__c</fullName>
        <label>Billing Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinic_Name__c</fullName>
        <label>Clinic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <label>Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Refferal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Clinic_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Class__c</columns>
        <columns>Type__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Clinic_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Type__c</columns>
        <columns>Class__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Customers</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Clinic_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Type__c</columns>
        <columns>Class__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Mobile_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Phone  &lt;&gt; null, NOT(REGEX(Phone,&quot;(\\d){10}&quot;)), FALSE)</errorConditionFormula>
        <errorMessage>Mobile : Please enter valid 10 digit  number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Validation</fullName>
        <active>false</active>
        <description>Validation to check minimum length</description>
        <errorConditionFormula>LEN(Phone__c) &lt; 10</errorConditionFormula>
        <errorMessage>Phone : Please enter a minimum of 10 digits</errorMessage>
    </validationRules>
</CustomObject>